<resources>
    <string name="app_name">Popular Movies</string>
    <string name="most_popular">Most Popular</string>
    <string name="top_rated_menu">Top Rated</string>
    <string name="movie_title">Movie Title</string>
    <string name="release_date_placeholder">Release date</string>
    <string name="user_rating_placeholder">User rating</string>
    <string name="placeholder">Placeholder</string>
    <string name="released_label">Released:</string>
    <string name="rating_label">Rating:</string>
    <string name="popular_sort_by">popular</string>
    <string name="top_rated_sort_by">top_rated</string>
    <string name="favourite_sort_by">favourites</string>
    <string name="trailers_list_title">Trailers:</string>
    <string name="placeholder_trailer_title">Trailer</string>
    <string name="most_popular_title">Most Popular Movies</string>
    <string name="top_rated_movies_title">Top Rated Movies</string>
    <string name="my_favourites_title">My Favourites</string>
    <string name="no_internet_message">Something went wrong. Check your internet connection…</string>
    <string name="reviews_list_title">Reviews:</string>
    <string name="author_label">From:</string>
    <string name="author_name_placeholder">author name</string>
    <string name="review_placeholder">review</string>
    <string name="error_message_toast">Something went wrong. We couldn\'t fetch trailers...</string>
    <string name="screen_small">small</string>
    <string name="screen_normal">normal</string>
    <string name="screen_large">large</string>
    <string name="screen_xlarge">xlarge</string>
    <string name="undefined">undefined</string>
    <string name="screen_landscape">landscape</string>
    <string name="screen_portrait">portrait</string>
</resources>
